--- a/style.css
+++ b/style.css
@@ -1,4 +1,83 @@
-.body{
-    background-color: rebeccapurple;
-    color: greenyellow;
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Poppins&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
+
+.main{
+    background-image: url(files/image/newbg.jpg);
+    height: 100vh;
+    position: relative;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: max(1200px, 100vw);
+}
+
+.main .box{
+    background-color: black;
+    position: absolute;
+    top: 0;
+    opacity: 0.66;
+    height: 100vh;
+    width: 100%;
+}
+
+nav {
+    max-width: 195vh;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    height: 84px;
+}
+
+nav img{
+    position: relative;
+    z-index: 10;
+}
+
+button{
+    position: relative;
+    z-index: 10;
+}
+.main .hero{
+    height:70%;
+    display: flex;
+    color: white;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    gap: 18px;
+    text-align: center;
+    gap: 10px;
+}
+
+.hero> :nth-child(1){
+    font-weight: bolder;
+    font-size: 48px;
+}
+.hero> :nth-child(2){
+    font-weight: 500px;
+    font-size: 20px;
+}
+.hero> :nth-child(3){
+    font-weight: 400px;
+    font-size: 16px;
+}
+
+.hero input{
+    color: white;
+    border-color: rgba(255, 0, 0, 0.648) ;
+    background-color: rgba(0, 0, 0, 0.607);
+}
+
+.hero button{
+    color: white;
+    background-color: red;
+    border: none;
+    margin: 10px;
+}
+
