--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@900&family=Nunito:wght@600&family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@900&display=swap');
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
 }
 
 .main{
@@ -18,9 +19,10 @@
     background-color: black;
     position: absolute;
     top: 0;
-    opacity: 0.66;
+    opacity: 0.79;
     height: 100vh;
     width: 100%;
+    
 }
 
 nav {
@@ -30,6 +32,7 @@ nav {
     align-items: center;
     justify-content:space-between;
     height: 84px;
+
 }
 
 nav img{
@@ -42,42 +45,77 @@ button{
     z-index: 10;
 }
 .main .hero{
+    border: solid black 2px;
     height:70%;
     display: flex;
     color: white;
     position: relative;
-    align-items: center;
+    align-items:flex-start;
+    margin-left: 74px;
+    border: none;
     justify-content: center;
     flex-direction: column;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    gap: 18px;
+    font-family: 'Martel Sans', sans-serif;
+    /* gap: 16px; */
     text-align: center;
-    gap: 10px;
+    
 }
 
 .hero> :nth-child(1){
     font-weight: bolder;
-    font-size: 48px;
+    font-size: 28px;
+    margin-top: 74px;
 }
 .hero> :nth-child(2){
-    font-weight: 500px;
-    font-size: 20px;
+    font-weight: bolder;
+    font-size: 28px;
 }
 .hero> :nth-child(3){
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+}
+.hero> :nth-child(4){
+    margin-top: 20px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400px;
-    font-size: 16px;
+    font-size: 10px;
 }
 
 .hero input{
     color: white;
-    border-color: rgba(255, 0, 0, 0.648) ;
+    padding: 10px 29px 8px 8px;
+    border: 0.1px solid red;
+    margin-top: 10px;
+    border-radius: 3px;
     background-color: rgba(0, 0, 0, 0.607);
 }
 
-.hero button{
-    color: white;
-    background-color: red;
+.btn{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    border-radius: 3px;
     border: none;
-    margin: 10px;
 }
+
+.eng{
+    padding: 8px 24px;
+    background-color: rgba(0, 0, 0, 0.607);
+    color: white;
+    border: 0.1px white solid;
+}
+
+.sign{
+    background-color: red;
+    padding: 3px 9px;
+    color: white;
+    font-size: 8px;
+}
+
+.get{
+    background-color: red;
+    padding: 8px 24px;
+    color: white;
+}
+
 
