--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background-color: black;
+}
 
 .main{
     background-image: url(files/image/newbg.jpg);
@@ -44,16 +47,18 @@ button{
 }
 
 .eng{
-    padding: 8px 29px;
+    padding: 8px 31px;
     background-color: transparent;
     color: white;
     border: 0.5px rgba(255, 255, 255, 0.557) solid;
     border-radius: 4px;
+    font-weight: bold;
 }
 
 .sign{
     margin-left: 25px;
-    padding: 8px 20px;
+    font-weight: bold;
+    padding: 8px 18px;
     background-color: red;
     color: white;
     border: none;
@@ -91,8 +96,35 @@ button{
 }
 
 .line{
-    border: 5px solid black;
+    border: 5px solid gray;
     border: none;
-    height: 10px;
-    background-color: rgba(0, 0, 0, 0.822);
+    height: 8px;
+background-color: rgba(128, 128, 128, 0.32);}
+
+
+
+.get{
+    padding: 20px 50px;
+    color: white;
+    font-size: 19px;
+    font-weight: bold;
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    margin-left: 10px;
+}
+
+.main input{
+    padding: 22px 190px 18px 17px;
+    background-color: rgba(0, 0, 0, 0.185);
+    border: 0.1px red solid;
+    border-radius: 4px;
+    font-size: 17px;
+
+}
+
+.main2{
+    display: flex;
+    
 }
