--- a/style.css
+++ b/style.css
@@ -1,130 +1,291 @@
  @import url('https://fonts.googleapis.com/css2?family=Martel+Sans&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-}
-body{
-    background-color: black;
-}
 
-.main{
-    background-image: url(files/image/newbg.jpg);
-    height: 95vh;
+ * {
+     margin: 0;
+     padding: 0;
+     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+ }
+
+ body {
+     background-color: black;
+
+ }
+
+ .main {
+     background-image: url(files/image/newbg.jpg);
+     height: 95vh;
+     position: relative;
+     background-position: center center;
+     background-repeat: no-repeat;
+ }
+
+
+
+ .main .box {
+     background-color: black;
+     height: 95vh;
+     width: 100%;
+     opacity: 0.79;
+     position: absolute;
+     top: 0;
+
+ }
+
+ nav {
+     max-width: 160vh;
+     margin: auto;
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     height: 84px;
+ }
+
+ nav img {
+     position: relative;
+     z-index: 10;
+ }
+
+ button {
+     position: relative;
+     z-index: 10;
+ }
+
+ .eng {
+     padding: 8px 31px;
+     background-color: transparent;
+     color: white;
+     border: 0.5px rgba(255, 255, 255, 0.557) solid;
+     border-radius: 4px;
+     font-weight: bold;
+ }
+
+ .sign {
+     margin-left: 25px;
+     font-weight: bold;
+     padding: 8px 18px;
+     background-color: red;
+     color: white;
+     border: none;
+     border-radius: 4px;
+ }
+
+ .text {
+     color: white;
+     position: relative;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     top: 28vh;
+     gap: 20px;
+ }
+
+ .text> :nth-child(1) {
+     font-size: 48px;
+     font-weight: 900;
+     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+ }
+
+ .text>:nth-child(2) {
+     font-size: 24px;
+     font-weight: 400;
+     font-family: 'Martel Sans', sans-serif;
+ }
+
+ .text> :nth-child(3) {
+     font-size: 20px;
+     font-weight: 400;
+     font-family: 'Martel Sans', sans-serif;
+
+ }
+
+ .line {
+     border: 5px solid gray;
+     border: none;
+     height: 8px;
+     background-color: rgba(128, 128, 128, 0.32);
+ }
+
+
+
+ .get {
+     padding: 20px 50px;
+     color: white;
+     font-size: 19px;
+     font-weight: bold;
+     background-color: red;
+     color: white;
+     border: none;
+     border-radius: 4px;
+     margin-left: 10px;
+ }
+
+ .main input {
+     padding: 22px 190px 18px 17px;
+     background-color: rgba(0, 0, 0, 0.185);
+     border: 0.1px red solid;
+     border-radius: 4px;
+     font-size: 17px;
+
+ }
+
+
+ .main2 {
+     display: flex;
+     max-width: 90vw;
+     margin: auto;
+     padding: 55px;
+     color: white;
+     justify-content: center;
+     align-items: center;
+     position: relative;
+ }
+
+ .textmain2 {
+     display: flex;
+     flex-direction: column;
+ }
+
+ .textmain2>:nth-child(1) {
+     font-size: 48px;
+     font-weight: 900;
+ }
+
+ .textmain2>:nth-child(2) {
+     font-size: 24px;
+     font-weight: 400;
+ }
+
+ .textmain2>:nth-child(3) {
+     font-size: 24px;
+     font-weight: 400;
+ }
+
+ .main2 .secimg img {
+     width: 38vw;
+     position: relative;
+
+ }
+
+ .main2 .secimg video {
+     position: absolute;
+     width: 28vw;
+     right: 255px;
+     top: 142px;
+     z-index: -1;
+ }
+
+ .main3 {
+     color: white;
+     padding: 45px;
+ }
+
+
+ .main3 .section_main3 {
+     display: flex;
+     flex-direction: row-reverse;
+     align-content: center;
+     align-items: center;
+     max-width: 80vw;
+ }
+
+ .textmain3 {
+     display: flex;
+     flex-direction: column;
+ }
+
+ .textmain3>:nth-child(1) {
+     font-size: 48px;
+     font-weight: 900;
+ }
+
+ .textmain3>:nth-child(2) {
+     font-size: 24px;
+     font-weight: 400;
+ }
+
+ section .section_main3 img {
+     width: 600px;
+ }
+
+.section_main3 .box{
+    width: 320px;
+    height: 100px;
+    border: 1px solid white;
     position: relative;
-    background-position: center center;
-    background-repeat: no-repeat;
+    left: 160px;
+    bottom: 80px;
 }
 
-
-
-.main .box{
-    background-color: black;
-    height: 95vh;
-    width: 100%;
-    opacity: 0.79;
-    position: absolute;
-    top: 0;
+.main4{
+    color: white;
+    position: relative;
+    padding: 55px;
     
 }
-
-nav{
+.main4 img{
+    height: 420px;
+}
+.section_main4{
+    display: flex;
+    align-content: center;
+    align-items: center;
     max-width: 160vh;
     margin: auto;
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    height: 84px;
+
 }
 
-nav img{
-    position: relative;
-    z-index: 10;
-}
-
-button{
-    position: relative;
-    z-index: 10;
-}
-
-.eng{
-    padding: 8px 31px;
-    background-color: transparent;
-    color: white;
-    border: 0.5px rgba(255, 255, 255, 0.557) solid;
-    border-radius: 4px;
-    font-weight: bold;
-}
-
-.sign{
-    margin-left: 25px;
-    font-weight: bold;
-    padding: 8px 18px;
-    background-color: red;
-    color: white;
-    border: none;
-    border-radius: 4px;
-}
-
-.text{
-    color: white;
-    position: relative;
+.textmain4{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    top: 28vh;
-    gap: 20px;
 }
 
-.text> :nth-child(1){
+.textmain4>:nth-child(1){
     font-size: 48px;
     font-weight: 900;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
-.text>:nth-child(2){
+.textmain4>:nth-child(2){
     font-size: 24px;
     font-weight: 400;
-    font-family: 'Martel Sans', sans-serif;
 }
 
-.text> :nth-child(3){
-    font-size: 20px;
-    font-weight: 400;
-    font-family: 'Martel Sans', sans-serif;
-    
+.imgvid video{
+    width: 330px;
+    position: absolute;
+    top: 90px;
+    right: 400px;
+    z-index: -1;
 }
 
-.line{
-    border: 5px solid gray;
-    border: none;
-    height: 8px;
-background-color: rgba(128, 128, 128, 0.32);}
-
-
-
-.get{
-    padding: 20px 50px;
+.main5{
     color: white;
-    font-size: 19px;
-    font-weight: bold;
-    background-color: red;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    margin-left: 10px;
+    padding: 40px;
 }
 
-.main input{
-    padding: 22px 190px 18px 17px;
-    background-color: rgba(0, 0, 0, 0.185);
-    border: 0.1px red solid;
-    border-radius: 4px;
-    font-size: 17px;
-
-}
-
-.main2{
+.section_main5{
     display: flex;
-    
+    flex-direction: row-reverse;
+    max-width: 90vw;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
 }
+
+.texmain5{
+    display: flex;
+    flex-direction: column;
+}
+
+.texmain5>:nth-child(1){
+    font-size: 48px;
+    font-weight: 900;
+}
+.texmain5>:nth-child(2){
+    font-size: 24px;
+    font-weight: 400;
+}
+
+
+
+
